# prototype

./: Cargo.toml  PLAN_PIECE_SMALL_CLEANUP.md  PLAN_TREE_FS_KEYMODEL.md
.github/scripts/: ci_matrix.json
backend/: Cargo.toml
backend/server/: Cargo.toml  Dockerfile  README.md
backend/server/src/: app_config.rs  db.rs  durable_store.rs  key_delivery.rs  lib.rs  main.rs  sqlite_store.rs  websocket.rs
backend/server/src/db/: piece_text_cleanup.rs  piece_text_edit.rs  piece_text_invariants.rs
backend/src/: internal_schemas.kdl  internal_schemas.rs  schema.rs  schema_kdl.rs
backend/src/merk_storage/: mod.rs  proofs.rs
backend/src/proto/: database.proto  mod.rs
backend/storage-encoding/: Cargo.toml
backend/storage-encoding/src/: keys.rs  lib.rs
demos/tauri/: app_schema.kdl  demo_launcher.py
demos/tauri/app/chat/: page.tsx
demos/tauri/app/setup/: page.tsx
demos/tauri/components/: channel-create-dialog.tsx  channel-list.tsx  files.tsx  shared-notes.tsx  user-management-panel.tsx
demos/tauri/lib/: api.ts  store.tsx  tauri-events.ts  types.ts
demos/tauri/src-tauri/: Cargo.toml  tauri.conf.json
demos/tauri/src-tauri/capabilities/: default.json
demos/tauri/src-tauri/src/: broadcast.rs  chat.rs  commands.rs  files.rs  fs_test_model.rs  lib.rs  main.rs  notes.rs  state.rs
demos/tauri/src-tauri/src/files_tree/: codec.rs  mod.rs
demos/tauri/test-harness/: Cargo.toml
demos/tauri/test-harness/src/: cold_read.rs  lib.rs  runner.rs
demos/tauri/test-harness/tests/: fs_consistency.rs
docs/native_ops_plans/: DESIGN_TREE_FS_KEY_MODEL.md  PLAN_PORT_MAIN.md  PLAN_PORT_MRT.md  PLAN_TAURI_TREE_FS.md  SCOPE_PHASE_A_FS.md
ffproof/: Cargo.toml
ffproof/changelog_core/: Cargo.toml
ffproof/changelog_core/src/: changelog.rs  lib.rs  native_ops.rs  piece_text.rs  piece_text_cleanup.rs  piece_text_legacy_limits.rs  piece_text_overlay.rs  piece_text_planner.rs  piece_text_planner_tests.rs  piece_text_resolution.rs  piece_text_resolver.rs  tree_fs.rs
ffproof/changelog_core/src/ops/: action_op.rs  create_space_op.rs  delete_op.rs  extend_op.rs  insert_op.rs  invite_user_op.rs  list_op.rs  mod.rs  op_tests.rs  piece_text_cleanup_buffers_op.rs  piece_text_cleanup_pieces_op.rs  piece_text_edit_op.rs  reduce_op.rs  refresh_keys_op.rs  rekey_op.rs  remove_user_op.rs  update_op.rs
ffproof/changelog_test_utils/: Cargo.toml
ffproof/changelog_test_utils/src/: test_server.rs
ffproof/integration_tests/: Cargo.toml
ffproof/integration_tests/benches/: action_cycle_benchmarks.rs  ff_cycle_benchmarks.rs  ffchat_cycle_benchmarks.rs  update_proof_size_benchmarks.rs
ffproof/integration_tests/benches/ff_common/: actions.rs  mod.rs
ffproof/integration_tests/tests/: integration_tests.rs
ffproof/methods/: Cargo.toml  build.rs
ffproof/methods/guest/: Cargo.toml
ffproof/methods_bench/: Cargo.toml  build.rs
ffproof/methods_bench/guest/: Cargo.toml
ffproof/src/: prover.rs
ffproof/tracer/shared/: Cargo.toml
ffproof/tracer/shared/src/: lib.rs
sdk/: Cargo.toml
sdk/codegen/: Cargo.toml
sdk/codegen/src/: lib.rs
sdk/src/: authentication.rs  broadcast.rs  cache.rs  changelog.rs  crypto.rs  lib.rs  list.rs  local_transport.rs  native_op.rs  piecetext.rs  schema.rs  table.rs  testing.rs  transport.rs  websocket_transport.rs
sdk/tests/: native_rename_inode.rs  piece_text_concurrency_stress.rs  piece_text_two_client.rs
sdk/tests/fixtures/: native_rename_inode.kdl
sdk/tests/piece_text_support/: mod.rs
sdk_fuzzer/src/: executor.rs  gen.rs  lib.rs
