[workspace]
members = [
    "backend",
    "backend/acl-types",
    "backend/server",
    "backend/storage-encoding",
    "demos/tauri/src-tauri",
    "demos/tauri/test-harness",
    "crypto",
    "ffproof/integration_tests",
    "ffproof",
    "ffproof/changelog_core",
    "ffproof/changelog_test_utils",
    "ffproof/tracer",
    "ffproof/methods_bench",
    "key_manager",
    "retention",
    "sdk",
    "sdk/codegen",
    "sdk_fuzzer",
    "zkp",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = [
    "Michele Orrù <m@orru.net>",
    "Trevor Perrin <trevp@trevp.net>",
    "Nora Trapp <ntrapp@cyber.harvard.edu>",
    "Greg Zaverucha <gregz@microsoft.com>",
]

[workspace.dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
async-tungstenite = { version = "0.26", features = ["tokio-runtime", "tokio-native-tls"] }
axum = { version = "0.7", features = ["macros", "ws"] }
base64 = { version = "0.22" }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
criterion = "0.4.0"
crossterm = { version = "0.27" }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
futures-channel = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
getrandom_02 = { package = "getrandom", version = "0.2" }
getrandom_03 = { package = "getrandom", version = "0.3" }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
hyper-tungstenite = { version = "0.5" }
native-tls = { version = "0.2" }
instant = { version = "0.1.13" }
log = { version = "0.4" }
merk = { git = "https://github.com/encrypted-spaces/merk.git" }
once_cell = { version = "1.19" }
prost = { version = "0.14.1" }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
rand_10 = { package = "rand", version = "0.10.0", default-features = false, features = ["std"] }
rand_chacha = "0.9"
rand_core = { version = "0.9.3" }
ratatui = { version = "0.26" }
rayon = "1.11.0"
rusqlite = { version = "0.32", features = ["bundled"] }
ctor = { version = "1" }
rustls = { version = "0.21", default-features = false, features = ["tls12"] }
rustls-pemfile = { version = "1.0" }
temp-env = { version = "0.3.6" }
serial_test = { version = "3.2.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-native-tls = { version = "0.3" }
tokio-rustls = { version = "0.24" }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-forest = { version = "0.2.0", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter"] }
tracing-web = "0.1.3"
uuid = { version = "1.0", features = ["v4", "js"] }
integer-encoding = "4.0"

# wasm
console_error_panic_hook = "0.1"
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen-rayon = { version = "1.2" }
wasm-bindgen-test = { version = "0.3" }
web-sys = { version = "0.3", features = ["console", "ErrorEvent", "MessageEvent", "Navigator", "Performance", "WebSocket", "Window"] }

# serialization
bincode = { version = "1.3", default-features = false }
bytesize = "2.1.0"
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
kdl = { version = "6.5", default-features = false }
pest = "2.7"
pest_derive = "2.7"
serde-wasm-bindgen = { version = "0.6" }
zeroize = { version = "1.8.1" }

# boring crypto
aes = { version = "0.8" }
ctr = { version = "0.9" }
chacha20poly1305 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.1.3", features = ["serde"] }
hkdf = { version = "0.12", default-features = false }
libcrux-ecdh = "0.0.5"
libcrux-ml-kem = "0.0.6"
ml-dsa = { version = "0.0.4", features = ["rand_core"] }
ml-kem = "0.3.0-pre.1"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.11.0-rc.3", default-features = false }
subtle = { version = "2.6", default-features = false }
x-wing = "0.1.0-pre.1"
ed25519-dalek = { version = "2.2.0", features = ["alloc", "serde"] }
libcrux-kem = "0.0.5"

# zkp stuff
p3-air = "^0.5.2"
p3-baby-bear = "^0.5.2"
p3-blake3-air = "^0.5.2"
p3-challenger = "^0.5.2"
p3-circle = "^0.5.2"
p3-commit = "^0.5.2"
p3-dft = "^0.5.2"
p3-field = "^0.5.2"
p3-fri = "^0.5.2"
p3-keccak = "^0.5.2"
p3-keccak-air = "^0.5.2"
p3-koala-bear = "^0.5.2"
p3-lookup = "^0.5.2"
p3-matrix = "^0.5.2"
p3-maybe-rayon = "^0.5.2"
p3-merkle-tree = "^0.5.2"
p3-mersenne-31 = "^0.5.2"
p3-poseidon2 = "^0.5.2"
p3-poseidon2-air = "^0.5.2"
p3-sha256 = "^0.5.2"
p3-symmetric = "^0.5.2"
p3-uni-stark = "^0.5.2"
p3-batch-stark = "^0.5.2"
spongefish = "0.7.0"
spongefish-circuit = "0.7.0"
spongefish-stark = { git = "https://github.com/mmaker/spongefish-stark.git", rev = "44e111df21444be4faf94dd54ed03ad26d513de5" }
num-bigint = "0.4.6"
num-traits = "0.2.19"

# risc0
risc0-build = { version = "3.0.5" }
risc0-zkvm = { version = "3.0.5", default-features = false }

# local crates
encrypted-spaces-key-manager = { path = "key_manager" }
encrypted-spaces-retention = { path = "retention" }
encrypted-spaces-sdk = { path = "sdk" }
encrypted-spaces-sdk-codegen = { path = "sdk/codegen" }
encrypted-spaces-backend = { path = "backend" }
encrypted-spaces-crypto = { path = "crypto" }
encrypted-spaces-zkp = { path = "zkp" }
encrypted-spaces-ffproof = { path = "ffproof" }
encrypted-spaces-changelog-core = { path = "ffproof/changelog_core" }
encrypted-spaces-changelog-test-utils = { path = "ffproof/changelog_test_utils" }
encrypted-spaces-backend-server = { path = "backend/server" }
encrypted-spaces-acl-types = { path = "backend/acl-types" }
encrypted-spaces-storage-encoding = { path = "backend/storage-encoding" }

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
strip = true
panic="unwind"   # Note: we cannot use panic="abort" because we have code that depends on catch_unwind(...) to convert panics to Result
