[package]
name = "encrypted-spaces-storage-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]

[dependencies]
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
