[package]
name = "encrypted-spaces-changelog-core"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
postcard = { workspace = true }
encrypted-spaces-acl-types = { workspace = true }
hex.workspace = true
instant.workspace = true
risc0-zkvm = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
rand = { workspace = true, features = ["os_rng"] }
serde = { workspace = true }
serde_json = { workspace = true }

merk = { workspace = true }

# Shared tracer seam (WriteOp / TraceReplayer / TraceReader). The host
# `ffproof-tracer` (transcript `create_trace`) edge is severed; it is ported
# separately and only the integration benches still call `create_trace`.
ffproof-tracer-shared = { path = "../tracer/shared" }

# Storage encoding for key construction (users_row_key, etc.)
encrypted-spaces-storage-encoding = { workspace = true }

[features]
bench-timing = []
mrt = ["ffproof-tracer-shared/mrt"]

[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true }
