#[package]
#name = "encrypted-spaces-ffproof-methods"
#version = "0.1.0"
#edition = "2021"
#
#[build-dependencies]
#risc0-build = "3.0.5"
#
#[package.metadata.risc0]
#methods = ["guest"]


[package]
name = "encrypted-spaces-ffproof-methods"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
risc0-build.workspace = true

[package.metadata.risc0]
methods = ["guest"]

[features]
mrt = []
