[package]
name = "encrypted-spaces-demo"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# The tree-fs file browser needs MRT (its move op is merk `MovePrefix`,
# unsupported on AVL), so the demo builds against MRT by default.
default = ["mrt"]
# Pass MRT/AVL storage selection through to the SDK so the demo (and its
# self-consistency harness) can be built against the `trev/mrt` backend.
mrt = ["encrypted-spaces-sdk/mrt", "encrypted-spaces-sdk-codegen/mrt"]
# Exposes the `fs_test_model` module from the library so the sibling
# `encrypted-spaces-demo-test-harness` crate can reuse the same self-consistent
# checker its cold-read tests need. The crate's own `#[cfg(test)]` builds get
# the module unconditionally, so production (Tauri) builds that enable neither
# never compile it.
test-support = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
encrypted-spaces-sdk-codegen = { workspace = true }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
encrypted-spaces-sdk = { workspace = true }
encrypted-spaces-storage-encoding = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
# `local-transport` is needed by the inline `#[cfg(test)] mod tests {}` blocks
# in chat.rs / tasks.rs / notes.rs / state.rs.  `testing` unlocks
# `ApplicationSchema::for_testing` for those test blocks.  Production
# builds pull in neither.
encrypted-spaces-sdk = { workspace = true, features = ["local-transport", "testing"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
