[package]
name = "encrypted-spaces-ffproof"
version = "0.1.0"
edition = "2021"


[package.metadata.risc0]
methods = ["guest"]

[workspace]

[features]
mrt = ["encrypted-spaces-changelog-core/mrt"]

[dependencies]
encrypted-spaces-changelog-core = { path = "../../changelog_core", default-features=false }
# Guest crate has its own [workspace], so parent workspace deps aren't reachable.
risc0-zkvm = {version = "3.0.5", default-features=false, features = ["std"]}
postcard = { version = "1.1.3", features = ["alloc"] }
hex = "0.4.3"

[patch.crates-io]
# Route every crates.io `sha2` dependency through RISC Zero's accelerated
# fork so SHA-256 compress runs on the zkVM precompile (≈68 cycles/block)
# instead of the software implementation. We patch the v0.10.9 tag because
# that is the version risc0-zkvm 3.0.5 (and other transitive deps) resolve
# to; matching the version actually present in the lockfile is what makes
# cargo honor the patch.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }

[profile.dev]
lto = "fat"

[profile.release]
# Quick-win compiler tweaks from
# https://dev.risczero.com/api/zkvm/optimization were measured (May 2026):
#   - `lto = "fat"` (current)        : baseline
#   - `lto = "thin", codegen-units=1`: +2% user cycles  (regression)
#   - `opt-level = "s"`              : +26% user cycles (regression)
# Default `opt-level = 3` + `lto = "fat"` wins on this guest.
lto = "fat"
# Keep debug symbols so RISC0 pprof (`RISC0_PPROF_OUT=...`) can resolve
# guest function names. The symbols stay in the ELF inside the host
# binary but are not executed, so they don't affect proof size or
# user-cycle counts — only the on-disk ELF gets bigger.
debug = true
