[package]
name = "encrypted-spaces-ffproof-bench"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[workspace]

[features]
mrt = ["encrypted-spaces-changelog-core/mrt"]

[dependencies]
encrypted-spaces-changelog-core = { path = "../../changelog_core", default-features = false, features = ["bench-timing"] }
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
postcard = { version = "1.1.3", features = ["alloc"] }
sha2 = "0.10.6"
hex = "0.4.3"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }

[profile.dev]
lto = "fat"

[profile.release]
lto = "fat"
