[package]
name = "ffproof-tracer-shared"
version = "0.1.0"
edition = "2021"

[features]
mrt = []

[dependencies]
merk = {workspace = true}

serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
hex = {version = "0.4.3", default-features=false, features = ["alloc"]}
